# nu-duo

./: .env.example  .gitignore  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  custom-tool.py  extension-hello.py  google-provider.py  interactive-anthropic.py  interactive-openai.py  interactive.py  one-shot-anthropic.py  one-shot-openai.py  one-shot.py  sample.py  sdk-session.py  session-continue.py  web-ui-server.py
scripts/: generate_models.py
